# prediction_infra

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: db.env.example  roi_gates.example.json  stat_validation_gates.example.json
data/examples/: ledger.csv  predictions.csv  returns.csv
data/returns/: returns_history.csv
docs/: README.md  agent-handoff.md  always-on-host-longlist.md  always-on-host-plan.md  attack-plan.md  cross-venue-research.md  current-status.md  database.md  experiment-log-template.csv  fast-loop.md  macbook-host-checklist.md  operations.md  repo-target.md  rigorous-validation-pipeline.md  scientific-policy.md  sources.md  validation-matrix.md
ops/cron/: pred_infra.cron
ops/lightsail/: install_lightsail.sh
ops/lightsail/logrotate/: pred-infra
scripts/: analyze_pair_lock_fast_loop.py  analyze_pair_lock_quote_diagnostics.py  build_integrity_report.py  eval_model.py  fetch_market_snapshot.py  ingest_normalized_to_db.py  init_postgres.py  install_local_fast_loop.sh  monitor_pipeline.py  normalize_snapshots.py  probability_report.py  run_daily_pipeline.py  run_tracked_pair_fast_loop.py  start_tracked_pair_fast_loop.sh  status_report.py  sync_returns_to_db.py  upsert_returns_history.py  validate_strategy.py
sql/: 001_init_postgres.sql
src/pred_infra/: __init__.py
tests/: test_analyze_pair_lock_fast_loop.py  test_fast_execution.py  test_fast_loop_reporting.py  test_integrity.py  test_metrics.py  test_normalize.py  test_postgres.py  test_probability.py  test_upsert_returns_history.py  test_validation.py
(+21 files in other folders)
